exports[`test the subscription component matches the snapshot 1`] = `
<span>
  <span
    aria-label="Yoast SEO is inactive"
    className="hGymDt"
    role="img" />
  <span
    aria-label="Local SEO is inactive"
    className="kswMOV"
    role="img" />
  <span
    aria-label="Video SEO is active"
    className="jzGgcX"
    role="img" />
  <span
    aria-label="News SEO is inactive"
    className="kdRmgg"
    role="img" />
  <span
    aria-label="WooCommerce SEO is active"
    className="gKxAXd"
    role="img" />
  <span
    aria-label="Local SEO for Woo is inactive"
    className="egmryf"
    role="img" />
</span>
`;

exports[`test the subscription component without active subscriptions using the default matches the snapshot 1`] = `
<span>
  <span
    aria-label="Yoast SEO is inactive"
    className="hGymDt"
    role="img" />
  <span
    aria-label="Local SEO is inactive"
    className="kswMOV"
    role="img" />
  <span
    aria-label="Video SEO is inactive"
    className="icgIoi"
    role="img" />
  <span
    aria-label="News SEO is inactive"
    className="kdRmgg"
    role="img" />
  <span
    aria-label="WooCommerce SEO is inactive"
    className="dritTx"
    role="img" />
  <span
    aria-label="Local SEO for Woo is inactive"
    className="egmryf"
    role="img" />
</span>
`;
